2009-07-12  Aidan Kehoe  <kehoea@parhasard.net>

	* files.el (after-find-file): 
	If the answer to "The directory containing %s does not exist.
	Create?" is no, kill the current buffer, since the user probably
	just misspelled the directory name. Thank you Rodney Sparapani!

2009-07-12  Aidan Kehoe  <kehoea@parhasard.net>

	* files.el (find-file-create-switch-thunk): 
	New macro, used to mark buffers created within #'find-file (and
	related) modified if the associated file doesn't exist.
	(find-alternate-file-other-window): 
	Correct this, pass CODESYS to find-file-other-window. 
	(find-file-read-only): 
	Correct behaviour of this function in the presence of wildcards. 
	(find-file): 
	(find-file-other-window): 
	(find-file-other-frame): 
	(find-file-read-only-other-window): 
	(find-file-read-only-other-frame): 
	(find-alternate-file): 
	Simplify these functions, use #'find-file-create-switch-thunk'
	instead of explicit #'switch-to-buffer calls. 

2009-07-11  Aidan Kehoe  <kehoea@parhasard.net>

	* code-files.el (insert-file-contents): 
	Take advantage of more sensible behaviour from
	#'insert-file-contents-internal, allowing us to actually follow
	the documented coding system behaviour for nonexistent files (that
	is, buffer-file-coding-system reflects coding-system-for-read &c.,
	not becoming undecided for either zero-length or nonexistent
	files).

2009-06-20  It's me FKtPp ;)  <m_pupil@yahoo.com.cn>
	* files.el (cd): Do not #'split-path on nil #'getenv result; Make
	sure the cd-path value is a list.

2009-06-14  Aidan Kehoe  <kehoea@parhasard.net>

	* help.el (describe-function-1): 
	Check macro-p, not macrop, when describing whether a symbol has an
	associated macro or an associated function. Relevant with
	autoloaded macros. 
	(function-arglist): 
	Accept multi-line arglists in built-in functions, as found in
	#'write-region-internal. #'dontusethis-set-symbol-value-handler
	is still broken for other reasons. 

2009-06-07  Aidan Kehoe  <kehoea@parhasard.net>
