@@ -1,3 +1,10 @@
+2009-07-13  Aidan Kehoe  <kehoea@parhasard.net>
+
+	* automated/mule-tests.el: 
+	Now that find-file on a nonexistent path gives a modified buffer,
+	we want to set this kind of buffer to be non-modified here before
+	killing it. 
+
 2009-07-11  Aidan Kehoe  <kehoea@parhasard.net>
 
 	* automated/mule-tests.el:
